docs/css/main.css
/* General Layout and Shell Styles */
:root {
  font-family:
    system-ui,
    -apple-system,
    BlinkMacSystemFont,
    "Segoe UI",
    Roboto,
    Oxygen,
    Ubuntu,
    Cantarell,
    "Open Sans",
    "Helvetica Neue",
    sans-serif;
  color: #333;
}

body {
  margin: 0;
}

*:focus {
  outline: 3px solid dodgerblue;
  outline-offset: 3px;
}

.container {
  margin: 0 auto;
  max-width: 1200px;
  padding: 0 1em;
}

nav {
  background-color: #171e3d;

  ul {
    list-style-type: none;
    margin: 0;
    padding: 0;

    display: flex;
    justify-content: center;
  }

  a {
    color: white;
    padding: 0.75em 2em;
    text-decoration: none;
    display: block;

    &:hover {
      background: whitesmoke;
      color: #171e3d;
    }
  }
}

/* Index page media list display styles */

.media-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  gap: 1rem;
  margin-top: 2rem;

  figure {
    margin: 0;

    border: 1px solid #ccc;
    padding: 1rem;
    border-radius: 4px;
    text-align: center;
  }

  figcaption {
    margin-top: 0.5rem;
  }
}

.info {
  padding: 1rem;
  text-align: center;
  border-radius: 4px;
  margin-top: 1rem;

  &.info--warning {
    background-color: #c83e57;
    border: 1px solid whitesmoke;
    color: whitesmoke;
    box-shadow:
      0 0 10px 0 rgba(0, 0, 0, 0.25),
      0 0 5px 0 rgba(0, 0, 0, 0.125);

    a {
      color: white;
    }
  }
}

/* Editor page styles */

.media-wrapper:not(:empty) {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 1rem;
  margin-block-end: 1rem;
  background-color: whitesmoke;
}

.editor-wrapper {
  padding: 1rem;
  height: 33vh;
  overflow-y: scroll;
  border: 1px solid lightgray;
  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
}

.cue--focus {
  .cue-select-button {
    background-color: #111;
    color: white;
    border-color: black;
  }
}

.button {
  background: transparent;
  border: 1px solid lightgray;
  padding: 0.25rem 0.5rem;
  cursor: pointer;
}

.cue-pause-button {
  display: none;
}

.cue-play-button::after {
  content: "▶";
}

.is-playing {
  .cue-play-button::after {
    content: "⏸";
    /* display: none; */
  }

  .cue-pause-button {
    display: none;
  }
}

.cue-controls {
  min-width: max-content;
}

.cue-notification {
  display: none;
}

.cue-notification--success {
  display: inline-block;
  padding: 0.2em 0.5em;
  color: white;
  color: #666;
  font-size: small;
  font-weight: bold;
  display: inline-block;
  border-radius: 25px;
  border: 1px solid gray;
}

.cue {
  margin-block-end: 1rem;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  gap: 1em;
}

.cue-text {
  flex-grow: 1;
  resize: none;
  padding: 0.25em 0.5em;
  border: none;

  &:focus-within {
    box-shadow:
      inset 0 0 3px rgba(0, 0, 0, 0.3),
      0 0 2px 0 rgba(0, 0, 0, 0.25);
  }
}

.editor-wrapper .end-time {
  display: none;
}

.editor-wrapper[data-show-end] .end-time {
  display: inline;
}

